k8_manifests/canary/ingress/backend-canary-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: "backend-canary-ingress"
  namespace: "stage-canary"
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
# below we target the traffic percentage we want to route to this canary deployment.
    nginx.ingress.kubernetes.io/canary-weight: "10"
# below means that this is the secondary ingress attached to existing stable ingress, this allows ingress to work because the paths of frontend and backend are same. Otherwise error will be there because both the ingress will use the same path and treated as different ingresses.
    nginx.ingress.kubernetes.io/canary: "true"

spec:
  
  ingressClassName: nginx

  rules:
  - host: stage-canary.internal
    http: 
     paths:
     - path: /api(/|$)(.*)
       pathType: ImplementationSpecific
       backend:
        service:
         name: "backend-canary-service"
         port:
          number: 80
