k8_manifests/canary/ingress/backend-stable-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
 name: "backend-stable-ingress"
 namespace: "stage-canary"
 annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
   ingressClassName: nginx

   rules:
   - host: stage-canary.internal
     http:
      paths:
      - path: /api(/|$)(.*) 
        pathType: ImplementationSpecific
        backend:
         service:
           name: "backend-stable-service"
           port:
            number: 80
