k8_manifests/canary/ingress/frontend-stable-ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
 name: "frontend-stable-ingress"
 namespace: "stage-canary"

spec:
   ingressClassName: nginx

   rules:
 
   - host: stage-canary.internal
     http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
         service:
           name: "frontend-stable-service"
           port:
            number: 80
